@@ -8,7 +8,6 @@ Needed:
 
 	BibTeX export:
 		What about underscores?  Need an "escape everything" mode?
-		UTF-8 option on bibtex export
 		Write out tags as special bibtex field
 	Resolve symlinks before doing relative filename magic
 
